overflow-x fix

--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -1,6 +1,7 @@
 .catalog {
   background-color: #ffffff;
   font-family: @font-main;
+  overflow-x: hidden; //ie 11
 }
 
 .catalog__list {
