--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -1,6 +1,5 @@
 .page-main {
   background-color: #ffffff;
-  overflow-x: hidden;
 }
 
 .page-main__header {
